# viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/shaders/: color.frag  simple.vert  simplelight.frag  simplelight.vert
ext/: CMakeLists.txt
include/: camera.h  renderer.h  scene.h
include/gl/: glhandle.h  glrenderable.h  shaderfactory.h  shaderprogram.h
include/glsl/: presets.h
include/glsl/shaderprogram/: simplecolor.h  simplelight.h
include/interface/: application.h
include/renderable/: renderable.h
include/ui/: application.h
src/: camera.cpp  main.cpp  renderer.cpp  scene.cpp
src/gl/: glrenderable.cpp  shaderfactory.cpp  shaderprogram.cpp
src/glsl/: presets.cpp  simplecolor.cpp  simplelight.cpp
src/interface/: application.cpp
src/renderable/: renderable.cpp
src/ui/: application.cpp
